Used SkLearn for K-Fold

--- a/ImageClassification.ipynb
+++ b/ImageClassification.ipynb
@@ -35,7 +35,8 @@
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
-    "from tensorflow.keras.models import Sequential"
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
    ]
   },
   {
@@ -137,8 +138,8 @@
    "outputs": [],
    "source": [
     "batch_size = 16\n",
-    "img_height = 180\n",
-    "img_width = 180"
+    "img_height = 224\n",
+    "img_width = 224"
    ]
   },
   {
@@ -149,8 +150,8 @@
    "source": [
     "train_ds = tf.keras.utils.image_dataset_from_directory(\n",
     "    dataset_directory,\n",
-    "    #labels=\"inferred\",\n",
-    "    #label_mode=\"categorical\",\n",
+    "    labels=\"inferred\",\n",
+    "    label_mode=\"int\",\n",
     "    validation_split=0.2,\n",
     "    subset=\"training\",\n",
     "    seed=123,\n",
@@ -167,8 +168,8 @@
    "source": [
     "val_ds = tf.keras.utils.image_dataset_from_directory(\n",
     "    dataset_directory,\n",
-    "    #labels=\"inferred\",\n",
-    "    #label_mode=\"categorical\",\n",
+    "    labels=\"inferred\",\n",
+    "    label_mode=\"int\",\n",
     "    validation_split=0.2,\n",
     "    subset=\"validation\",\n",
     "    seed=123,\n",
@@ -285,12 +286,12 @@
    "outputs": [],
    "source": [
     "data_augmentation = keras.Sequential([\n",
-    "        layers.RandomFlip(\"horizontal\",\n",
+    "        layers.RandomFlip(\"horizontal_and_vertical\",\n",
     "                        input_shape=(img_height,\n",
     "                                    img_width,\n",
     "                                    3)),\n",
-    "        layers.RandomRotation(0.1),\n",
-    "        layers.RandomZoom(0.1),\n",
+    "        layers.RandomRotation(0.2),\n",
+    "        layers.RandomZoom(0.2),\n",
     "    ])"
    ]
   },
@@ -313,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Training Without K-Fold Cross Validation**"
+    "## **Training the Model (Accuracy and Loss)**"
    ]
   },
   {
@@ -360,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer='adam',\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
     "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
     "              metrics=['accuracy'])"
    ]
@@ -385,6 +386,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Define the Callback**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
+    "\n",
+    "checkpoint = ModelCheckpoint(\"Model.h5\", monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=False, mode='auto', save_freq=\"epoch\")\n",
+    "early = EarlyStopping(monitor='val_accuracy', min_delta=0, patience=40, verbose=1, mode='auto')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Train the Model**"
    ]
   },
@@ -397,8 +417,8 @@
     "epochs = 50\n",
     "history = model.fit(\n",
     "    train_ds,\n",
-    "    validation_data=val_ds,\n",
     "    epochs=epochs,\n",
+    "    callbacks=[checkpoint, early],\n",
     ")"
    ]
   },
@@ -416,25 +436,21 @@
    "outputs": [],
    "source": [
     "acc = history.history['accuracy']\n",
-    "val_acc = history.history['val_accuracy']\n",
     "\n",
     "loss = history.history['loss']\n",
-    "val_loss = history.history['val_loss']\n",
     "\n",
     "epochs_range = range(epochs)\n",
     "\n",
     "plt.figure(figsize=(8, 8))\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.plot(epochs_range, acc, label='Training Accuracy')\n",
-    "plt.plot(epochs_range, val_acc, label='Validation Accuracy')\n",
     "plt.legend(loc='lower right')\n",
-    "plt.title('Training and Validation Accuracy')\n",
+    "plt.title('Training Accuracy')\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.plot(epochs_range, loss, label='Training Loss')\n",
-    "plt.plot(epochs_range, val_loss, label='Validation Loss')\n",
     "plt.legend(loc='upper right')\n",
-    "plt.title('Training and Validation Loss')\n",
+    "plt.title('Training Loss')\n",
     "plt.show()"
    ]
   },
@@ -442,14 +458,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Training With K-Fold Cross Validation**"
+    "## **Training the Model (Validation Accuracy and Loss)**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Create the Model**"
+    "### **K-Fold Cross Validation**"
    ]
   },
   {
@@ -458,9 +474,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_model():\n",
+    "train_ds = train_ds.unbatch()\n",
     "\n",
-    "  num_classes = len(class_names)\n",
+    "train_images = list(train_ds.map(lambda x, y: x))\n",
+    "train_labels = list(train_ds.map(lambda x, y: y))\n",
+    "\n",
+    "val_ds = val_ds.unbatch()\n",
+    "\n",
+    "val_images = list(val_ds.map(lambda x, y: x))\n",
+    "val_labels = list(val_ds.map(lambda x, y: y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Merge Images and Labels**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images = np.concatenate((train_images, val_images), axis=0)\n",
+    "labels = np.concatenate((train_labels, val_labels), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Define the K-Fold and Model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "\n",
+    "num_classes = len(class_names)\n",
+    "\n",
+    "kfold = KFold(n_splits=10, shuffle=True)\n",
+    "\n",
+    "fold_no = 1\n",
+    "\n",
+    "for train, val in kfold.split(images, labels):\n",
     "\n",
     "  model = Sequential([\n",
     "    data_augmentation,\n",
@@ -475,20 +538,14 @@
     "    layers.Flatten(),\n",
     "    layers.Dense(128, activation='relu'),\n",
     "    layers.Dense(num_classes)\n",
-    "  ])\n",
-    "\n",
-    "  model.compile(optimizer='adam',\n",
-    "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "              metrics=['accuracy'])\n",
-    "\n",
-    "  return model"
+    "  ])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **K Fold Cross Validation**"
+    "### **Compile the Model**"
    ]
   },
   {
@@ -497,9 +554,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k = 10\n",
-    "val_samples = len(val_ds) // k\n",
-    "epochs = 10"
+    "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Model Summary**"
    ]
   },
   {
@@ -508,28 +572,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(k):\n",
-    "    print('processing fold #', i)\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Define the Callback**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
     "\n",
-    "    for images, labels in val_ds:\n",
-    "        \n",
-    "        partial_val_datas = np.concatenate(\n",
-    "            [images[:i * val_samples],\n",
-    "            images[(i + 1) * val_samples:]],\n",
-    "            axis=0)\n",
-    "    \n",
-    "        partial_val_labels = np.concatenate(\n",
-    "            [labels[:i * val_samples],\n",
-    "            labels[(i + 1) * val_samples:]],\n",
-    "            axis=0)\n",
-    "    \n",
-    "    model = build_model()\n",
+    "checkpoint = ModelCheckpoint(\"Model.h5\", monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=False, mode='auto', save_freq=\"epoch\")\n",
+    "early = EarlyStopping(monitor='val_accuracy', min_delta=0, patience=40, verbose=1, mode='auto')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Train the Model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('------------------------------------------------------------------------')\n",
+    "print(f'Training for fold {fold_no} ...')\n",
     "\n",
-    "    history = model.fit(\n",
-    "    partial_val_datas,\n",
-    "    partial_val_labels,\n",
+    "acc_per_fold = []\n",
+    "loss_per_fold = []\n",
+    "\n",
+    "epochs = 10\n",
+    "history = model.fit(\n",
+    "    images[val],\n",
+    "    labels[val],\n",
     "    epochs=epochs,\n",
-    ")"
+    "    callbacks=[checkpoint, early],\n",
+    ")\n",
+    "\n",
+    "scores = model.evaluate(images[val], labels[val], verbose=0)\n",
+    "print(f'Score for fold {fold_no}: {model.metrics_names[0]} of {scores[0]}; {model.metrics_names[1]} of {scores[1]*100}%')\n",
+    "acc_per_fold.append(scores[1] * 100)\n",
+    "loss_per_fold.append(scores[0])\n",
+    "\n",
+    "fold_no = fold_no + 1"
    ]
   },
   {
@@ -545,26 +642,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc = history.history['accuracy']\n",
     "val_acc = history.history['val_accuracy']\n",
     "\n",
-    "loss = history.history['loss']\n",
     "val_loss = history.history['val_loss']\n",
     "\n",
     "epochs_range = range(epochs)\n",
     "\n",
     "plt.figure(figsize=(8, 8))\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.plot(epochs_range, acc, label='Training Accuracy')\n",
     "plt.plot(epochs_range, val_acc, label='Validation Accuracy')\n",
     "plt.legend(loc='lower right')\n",
-    "plt.title('Training and Validation Accuracy')\n",
+    "plt.title('Validation Accuracy')\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.plot(epochs_range, loss, label='Training Loss')\n",
     "plt.plot(epochs_range, val_loss, label='Validation Loss')\n",
     "plt.legend(loc='upper right')\n",
-    "plt.title('Training and Validation Loss')\n",
+    "plt.title('Validation Loss')\n",
     "plt.show()"
    ]
   },
