--- a/ImageClassification.ipynb
+++ b/ImageClassification.ipynb
@@ -28,15 +28,13 @@
    "outputs": [],
    "source": [
     "# Imports needed\n",
-    "import os\n",
     "import numpy as np\n",
     "import PIL\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+    "from tensorflow.keras.models import Sequential"
    ]
   },
   {
@@ -314,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Training the Model (Accuracy and Loss)**"
+    "## **Training the Model**"
    ]
   },
   {
@@ -417,6 +415,7 @@
     "epochs = 50\n",
     "history = model.fit(\n",
     "    train_ds,\n",
+    "    validation_data=val_ds,\n",
     "    epochs=epochs,\n",
     "    callbacks=[checkpoint, early],\n",
     ")"
@@ -436,227 +435,26 @@
    "outputs": [],
    "source": [
     "acc = history.history['accuracy']\n",
-    "\n",
-    "loss = history.history['loss']\n",
-    "\n",
-    "epochs_range = range(epochs)\n",
-    "\n",
-    "plt.figure(figsize=(8, 8))\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.plot(epochs_range, acc, label='Training Accuracy')\n",
-    "plt.legend(loc='lower right')\n",
-    "plt.title('Training Accuracy')\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.plot(epochs_range, loss, label='Training Loss')\n",
-    "plt.legend(loc='upper right')\n",
-    "plt.title('Training Loss')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## **Training the Model (Validation Accuracy and Loss)**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **K-Fold Cross Validation**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_ds = train_ds.unbatch()\n",
-    "\n",
-    "train_images = list(train_ds.map(lambda x, y: x))\n",
-    "train_labels = list(train_ds.map(lambda x, y: y))\n",
-    "\n",
-    "val_ds = val_ds.unbatch()\n",
-    "\n",
-    "val_images = list(val_ds.map(lambda x, y: x))\n",
-    "val_labels = list(val_ds.map(lambda x, y: y))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Merge Images and Labels**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "images = np.concatenate((train_images, val_images), axis=0)\n",
-    "labels = np.concatenate((train_labels, val_labels), axis=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Define the K-Fold and Model**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import KFold\n",
-    "\n",
-    "num_classes = len(class_names)\n",
-    "\n",
-    "kfold = KFold(n_splits=10, shuffle=True)\n",
-    "\n",
-    "fold_no = 1\n",
-    "\n",
-    "for train, val in kfold.split(images, labels):\n",
-    "\n",
-    "  model = Sequential([\n",
-    "    data_augmentation,\n",
-    "    layers.Rescaling(1./255),\n",
-    "    layers.Conv2D(16, 3, padding='same', activation='relu'),\n",
-    "    layers.MaxPooling2D(),\n",
-    "    layers.Conv2D(32, 3, padding='same', activation='relu'),\n",
-    "    layers.MaxPooling2D(),\n",
-    "    layers.Conv2D(64, 3, padding='same', activation='relu'),\n",
-    "    layers.MaxPooling2D(),\n",
-    "    layers.Dropout(0.2),\n",
-    "    layers.Flatten(),\n",
-    "    layers.Dense(128, activation='relu'),\n",
-    "    layers.Dense(num_classes)\n",
-    "  ])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Compile the Model**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
-    "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "              metrics=['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Model Summary**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Define the Callback**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
-    "\n",
-    "checkpoint = ModelCheckpoint(\"Model.h5\", monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=False, mode='auto', save_freq=\"epoch\")\n",
-    "early = EarlyStopping(monitor='val_accuracy', min_delta=0, patience=40, verbose=1, mode='auto')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Train the Model**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('------------------------------------------------------------------------')\n",
-    "print(f'Training for fold {fold_no} ...')\n",
-    "\n",
-    "acc_per_fold = []\n",
-    "loss_per_fold = []\n",
-    "\n",
-    "epochs = 10\n",
-    "history = model.fit(\n",
-    "    images[val],\n",
-    "    labels[val],\n",
-    "    epochs=epochs,\n",
-    "    callbacks=[checkpoint, early],\n",
-    ")\n",
-    "\n",
-    "scores = model.evaluate(images[val], labels[val], verbose=0)\n",
-    "print(f'Score for fold {fold_no}: {model.metrics_names[0]} of {scores[0]}; {model.metrics_names[1]} of {scores[1]*100}%')\n",
-    "acc_per_fold.append(scores[1] * 100)\n",
-    "loss_per_fold.append(scores[0])\n",
-    "\n",
-    "fold_no = fold_no + 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Visualize Training Results**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "val_acc = history.history['val_accuracy']\n",
     "\n",
+    "loss = history.history['loss']\n",
     "val_loss = history.history['val_loss']\n",
     "\n",
     "epochs_range = range(epochs)\n",
     "\n",
     "plt.figure(figsize=(8, 8))\n",
     "plt.subplot(1, 2, 1)\n",
+    "plt.plot(epochs_range, acc, label='Training Accuracy')\n",
     "plt.plot(epochs_range, val_acc, label='Validation Accuracy')\n",
     "plt.legend(loc='lower right')\n",
+    "plt.title('Training Accuracy')\n",
     "plt.title('Validation Accuracy')\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
+    "plt.plot(epochs_range, loss, label='Training Loss')\n",
     "plt.plot(epochs_range, val_loss, label='Validation Loss')\n",
     "plt.legend(loc='upper right')\n",
+    "plt.title('Training Loss')\n",
     "plt.title('Validation Loss')\n",
     "plt.show()"
    ]
@@ -678,7 +476,7 @@
     "testing_file = tf.keras.utils.get_file('Suillus Luteus', origin=testing_path)\n",
     "\n",
     "img = tf.keras.utils.load_img(\n",
-    "    testing_path, target_size=(img_height, img_width)\n",
+    "    testing_file, target_size=(img_height, img_width)\n",
     ")\n",
     "img_array = tf.keras.utils.img_to_array(img)\n",
     "img_array = tf.expand_dims(img_array, 0) # Create a batch\n",
