Made Model using ResNet50

--- a/ImageClassification.ipynb
+++ b/ImageClassification.ipynb
@@ -359,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+    "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=0.0001),\n",
     "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
     "              metrics=['accuracy'])"
    ]
@@ -393,10 +393,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
+    "from keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
     "\n",
     "checkpoint = ModelCheckpoint(\"Model.h5\", monitor='val_accuracy', verbose=1, save_best_only=True, save_weights_only=False, mode='auto', save_freq=\"epoch\")\n",
-    "early = EarlyStopping(monitor='val_accuracy', min_delta=0, patience=40, verbose=1, mode='auto')"
+    "early = EarlyStopping(monitor='val_accuracy', min_delta=0, patience=40, verbose=1, mode='auto')\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_accuracy', factor=0.1,\n",
+    "                              mode='max', cooldown=2, patience=2, min_lr=0)"
    ]
   },
   {
@@ -417,7 +419,7 @@
     "    train_ds,\n",
     "    validation_data=val_ds,\n",
     "    epochs=epochs,\n",
-    "    callbacks=[checkpoint, early],\n",
+    "    callbacks=[checkpoint, early, reduce_lr],\n",
     ")"
    ]
   },
@@ -472,22 +474,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testing_path = pathlib.Path(\"TestingDatasets\")\n",
-    "testing_file = tf.keras.utils.get_file('Suillus Luteus', origin=testing_path)\n",
+    "testing_directory = pathlib.Path(\"TestingDatasets\")\n",
     "\n",
-    "img = tf.keras.utils.load_img(\n",
-    "    testing_file, target_size=(img_height, img_width)\n",
-    ")\n",
-    "img_array = tf.keras.utils.img_to_array(img)\n",
-    "img_array = tf.expand_dims(img_array, 0) # Create a batch\n",
+    "testing_files = list(testing_directory.glob('*.jpg'))\n",
     "\n",
-    "predictions = model.predict(img_array)\n",
-    "score = tf.nn.softmax(predictions[0])\n",
+    "for file in testing_files:\n",
+    "    image = tf.keras.preprocessing.image.load_img(file, target_size=(img_height, img_width))\n",
     "\n",
-    "print(\n",
-    "    \"This image most likely belongs to {} with a {:.2f} percent confidence.\"\n",
-    "    .format(class_names[np.argmax(score)], 100 * np.max(score))\n",
-    ")"
+    "    image_array = tf.keras.utils.img_to_array(image)\n",
+    "    image_array = tf.expand_dims(image_array, 0) # Create a batch\n",
+    "\n",
+    "    predictions = model.predict(image_array)\n",
+    "    score = tf.nn.softmax(predictions[0])\n",
+    "\n",
+    "    print(\n",
+    "        \"This {} most likely belongs to {} with a {:.2f} percent confidence.\"\n",
+    "        .format(file, class_names[np.argmax(score)], 100 * np.max(score))\n",
+    "    )"
    ]
   }
  ],
